<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txtOrdenarPorPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Municipio:"
        android:layout_marginBottom="10dp" />


    <Spinner
        android:id="@+id/spMunicipios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />


    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filtrar"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:layout_marginTop="20dp" />

</LinearLayout>
</ScrollView>