<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/OrdenarItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Ordenar item"
        android:icon="@drawable/ordenar"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info"
        />

    <item
        android:id="@+id/RegistrarRepostajeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/registrarRepostaje"
         />

    <item
        android:id="@+id/ConsultarRepostajeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/historialRepostaje"
         />

    <item
        android:id="@+id/FiltrarMunicipiosItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Filtrar Municipio"
        android:icon="@drawable/filtro"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuItemDescuento"
        android:title="@string/registrar_descuento"
        />

</menu>