...
        <RadioGroup
            android:id="@+id/btnRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/btnGasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gasolina" />

            <RadioButton
                android:id="@+id/btnDiesel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diesel" />
        </RadioGroup>

        <Button
            android:id="@+id/btnOrdenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Ordenar" />


...
