...

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv95"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha"
        tools:text="Direccion" />

    <TextView
        android:id="@+id/tv95Label"
...
